<resources>
    <string name="app_name">飞虎直播</string>
    <string name="api_retry_error">请重试!</string>
    <string name="api_default_error">请求失败，请检查您的网络!</string>
    <string name="some_error">出错啦，请稍后重试!</string>
    <string name="connection_error">网络连接失败，请检查您的网络!</string>
    <string name="loding"> 正在加载中...</string>
    <string name="forgetpsd">忘记密码</string>
    <string name="inputPhoneNum">请输入手机号</string>
    <string name="inputNickname">请输入新昵称(不超过8位)</string>
    <string name="modeYk">游客模式</string>
    <string name="phoneNum">请输入手机号码</string>
    <string name="inputPsd">请输入密码</string>
    <string name="login">登 录</string>
    <string name="forgetPsd">忘记密码？</string>
    <string name="register">快速注册</string>
    <string name="otherLogin">第三方帐号登录</string>
    <string name="hot">热门</string>
    <string name="latest">最新</string>
    <string name="concern">关注</string>
    <string name="yanzhi">经典</string>
    <string name="getCode">获取验证码</string>
    <string name="inputCode">请输入验证码</string>
    <string name="inputNewPsd">请输入新密码</string>
    <string name="inputNowPsd">输入当前密码</string>
    <string name="inputPsdAgain">请再次输入密码</string>
    <string name="registerPhone">手机注册</string>
    <string name="nickName">昵称</string>
    <string name="inputNewPassword">请输入密码</string>
    <string name="live_unknown">不显示地理位置</string>
    <string name="live_ing">直播中</string>
    <string name="live_back">回放</string>
    <string name="no_concern">你还没有关注的主播</string>
    <string name="add_concern">快去加关注吧</string>
    <string name="go_concern">去关注</string>
    <string name="sign_everyday">签到</string>
    <string name="sign_text">每日首次登录可获得10~15虎币，点击签到</string>
    <string name="cancel">取消</string>
    <string name="find_hint_txt">请输入ID/昵称</string>
    <string name="find_concern">搜索用户</string>
    <string name="recommend_txt">推荐以下主播</string>
    <string name="day_rank">日榜</string>
    <string name="month_rank">月榜</string>
    <string name="sum_rank">总榜</string>
    <string name="host_rank">排行榜</string>
    <string name="contribution_rank">贡献榜</string>
    <string name="charge">充值</string>
    <string name="charge_result">充值结果</string>
    <string name="charge_success">充值成功</string>
    <string name="contribution">贡献榜</string>
    <string name="fans_contribution">粉丝贡献榜</string>
    <string name="earnings">收益</string>
    <string name="level">等级</string>
    <string name="mall">商城</string>
    <string name="invite_friends">邀请好友</string>
    <string name="personalInfo">个人资料</string>
    <string name="head_pic">头像</string>
    <string name="sex">性别</string>
    <string name="address">所在地</string>
    <string name="personalized_signature">个性签名</string>
    <string name="authentication">实名认证</string>
    <string name="binding_mobile_phone_number">绑定手机号</string>
    <string name="userinfo_sex_female">女</string>
    <string name="userinfo_sex_male">男</string>
    <string name="userinfo_sex_unknow">保密</string>
    <string name="dialog_selectSex">请选择</string>
    <string name="settings">设置</string>
    <string name="blacklist">黑名单</string>
    <string name="recevice_news">消息接收</string>
    <string name="faq">常见问题</string>
    <string name="clear_the_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_contact">联系我们</string>
    <string name="about_us_gover">平台管理规范</string>
    <string name="give_us_score">给我们评分</string>
    <string name="to_launch_the_login">退出登录</string>
    <string name="hostname">主播名字</string>
    <string name="recharge">充值</string>
    <string name="recharge_explain">充值虎币可获得飞虎流星奖励,虎币:飞虎流星=100:1,获得的飞虎流星存于包裹中</string>
    <string name="prepaid_phone_records">充值记录</string>
    <string name="load_more">加载更多</string>
    <string name="refresh">正在刷新</string>
    <string name="myearnings">我的收益</string>
    <string name="get_the_record">提现记录</string>
    <string name="notice_sns">动态消息</string>
    <string name="notice_sys">系统消息</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="btn_return_home">返回首页</string>
    <string name="btn_return">返回</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_agree">同意</string>
    <string name="btn_sure">确定</string>
    <string name="btn_close">关闭</string>
    <string name="tip_no_permission">权限不足</string>
    <string name="phonevalidation">手机号验证</string>
    <string name="hubi">虎币:</string>
    <string name="cangetmoney">可提现金额 (元)</string>
    <string name="zfbgetmoney">支付宝提现</string>
    <string name="nextstep">下一步</string>
    <string name="notice1">验证手机号以保障您的账户安全</string>
    <string name="notice2">该手机号用于提现相关短信及重新绑定支付宝帐号</string>
    <string name="blindphone_explain">绑定说明:成功绑定手机号将获得10虎币</string>
    <string name="notice_modify_nickname">第一次修改昵称免费，之后修改5000虎币一次</string>
    <string name="bindingaccount">提现账户绑定</string>
    <string name="living">正在直播</string>
    <string name="secret_info">私信</string>
    <string name="fans">粉丝</string>
    <string name="person_page">个人主页</string>
    <string name="dynamic">我的动态</string>
    <string name="id_num">ID 号(点击复制)</string>
    <string name="send_gift">送礼</string>
    <string name="get_gift">收礼</string>
    <string name="share">分享</string>
    <string name="share_sup">分享更多惊喜</string>
    <string name="concern_person">关注的人</string>
    <string name="find_contact_hint_txt">请输入联系人</string>
    <string name="contact_service">联系客服</string>
    <string name="look_now">在看</string>
    <string name="quick_to_concern">快去搜索你想关注的好友吧</string>
    <string name="hu_bi">虎币</string>
    <string name="day_con">日贡数</string>
    <string name="month_con">月贡数</string>
    <string name="sum_con">总贡数</string>
    <string name="no_chat">暂时没有新消息</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="more_message">显示更多消息</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="send">发送</string>
    <string name="watch_history">观看历史</string>
    <string name="clear_all">清空</string>
    <string name="no_history">暂无观看记录</string>
    <string name="desc_check_mark">check mark</string>
    <string name="text1">绑定的支付宝将成为你的提现账户</string>
    <string name="text2">支付宝账户</string>
    <string name="text3">请输入支付宝帐号</string>
    <string name="text4">真 实 姓 名</string>
    <string name="text5">请输入真实姓名</string>
    <string name="text6">绑定</string>
    <string name="first_bind_zhifu">首次提现账户绑定</string>
    <string name="text7">个人身份信息</string>
    <string name="text8">*请填写真实信息，否则无法通过</string>
    <string name="text9">姓名</string>
    <string name="text10">请输入姓名</string>
    <string name="text11">身份证号</string>
    <string name="text12">请输入身份证号</string>
    <string name="text13">提交</string>
    <string name="text14">收益提现</string>
    <string name="text15">虎币余额</string>
    <string name="text16">可兑换收益 (元)</string>
    <string name="text17">更换账户</string>
    <string name="text18">提现账户:</string>
    <string name="text19">更改</string>
    <string name="text20">提现金虎币</string>
    <string name="text21">大于10000且为100整数倍</string>
    <string name="text22">到账金额</string>
    <string name="text23">0元</string>
    <string name="text24">立即提现</string>
    <string name="text25">我已阅读并同意</string>
    <string name="text26">《飞虎用户协议》</string>
    <string name="text27">关于成分比例调整问题，请点击这里></string>
    <string name="text28">支付宝</string>
    <string name="text29">微信</string>
    <string name="text30">交易关闭</string>
    <string name="text31">完成实名认证，开启美妙的飞虎直播之旅!</string>
    <string name="text32">认证</string>
    <string name="text33">取消</string>
    <string name="text34">实名认证</string>
    <string name="text35">恭喜你，已经通过认证！</string>
    <string name="text36">去开播</string>
    <string name="sure_to_clear">确定要清空所有历史记录吗?</string>
    <string name="ok">确定</string>
    <string name="delete">删除</string>
    <string name="count_favourate">次点赞</string>
    <string name="count_watch">次浏览</string>
    <string name="count_comment">次评论</string>
    <string name="write_comment">写评论</string>
    <string name="zan">赞</string>
    <string name="dialog_input_text_hint">开启弹幕互动吧</string>
    <string name="t1">直播中</string>
    <string name="tip_force_offline">您的帐号已在其它地方登陆</string>
    <string name="searchmusic">搜索歌曲</string>
    <string name="t2">虎币数</string>
    <string name="t3">飞虎号:</string>
    <string name="photo_album">相机胶卷</string>
    <string name="no_photo">相册没有图片</string>
    <string name="check_the_update">检查更新</string>
    <string name="preview">预览</string>
    <string name="finish">完成</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="picture">照片</string>
    <string name="fabu">发布</string>
    <string name="say_something">说点什么吧...</string>
    <string name="send_success">发布成功!</string>
    <string name="report">举报</string>
    <string name="dynamic_o">动态</string>
    <string name="lahei">拉黑</string>
    <string name="lahei_result">拉黑后将取消关注且无法私信</string>
    <string name="concerned">已关注</string>
    <string name="coin">虎币:</string>
    <string name="yin_coin">银虎币:</string>
    <string name="gold_coin">金虎币</string>
    <string name="donate">赠送</string>
    <string name="host_quit">该主播已下播</string>
    <string name="community">社区</string>
    <string name="watch_others">看看其他的直播吧</string>
    <string name="other_count">其他数量</string>
    <string name="yishengyishi">1314   一生一世</string>
    <string name="woaini">520   我爱你</string>
    <string name="yaobaobao">188   要抱抱</string>
    <string name="qiqieshunli">66   一切顺利</string>
    <string name="xiangni">30   想你</string>
    <string name="shiquanshimei">10   十全十美</string>
    <string name="yixinyiyi">1   一心一意</string>
    <string name="user">用户</string>
    <string name="master">主播</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清除搜索历史</string>
    <string name="safe">账号与安全</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="modify_phone">更换手机号</string>
    <string name="gift">礼物</string>
    <string name="bag">包裹</string>
    <string name="lianghao">换一批</string>
    <string name="buy">购买</string>
    <string name="pay_result">支付结果</string>
    <string name="pay_success">付款成功</string>
    <string name="pay_beauti">您的ID已经更换为您购买靓号的ID哦！</string>
    <string name="go_store">快去商场购买礼物和靓号吧></string>
    <string name="go_send">快去给你喜欢的主播送礼物吧！</string>
    <string name="offline_gifts">您下播后有以下用户给您送礼物</string>
    <string name="know">知道啦</string>
    <string name="online_user">在线人数</string>
    <string name="no_search">查询不到您输入的主播/用户！</string>
    <string name="send_id_card">上传手持身份证照</string>
    <string name="upload_picture">上传照片(最多上传三张)</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="versionchecklib_downloading">正在下载中...</string>
    <string name="versionchecklib_download_progress">下载进度:%d%%/100%%</string>
    <string name="versionchecklib_download_fail">下载失败</string>
    <string name="versionchecklib_download_finish">下载完成，点击安装</string>
</resources>