<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:orientation="vertical">

    <cn.feihutv.zhibofeihu.ui.widget.TCActivityTitle
        android:id="@+id/account_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleText="@string/bindingaccount"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:src="@drawable/icon_alipay_big"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/text1"
        android:textColor="@color/textNormal"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text2"
            android:textColor="@color/textNormal"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/text3"
            android:lines="1"
            android:inputType="text"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_gray"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text4"
            android:textColor="@color/textNormal"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/text5"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_gray"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/login_ll2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_background_forbidden"
        android:text="@string/text6"
        android:textColor="@color/app_white"
        android:textSize="18sp"/>

</LinearLayout>
