<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_white"
              android:orientation="vertical">

    <cn.feihutv.zhibofeihu.ui.widget.TCActivityTitle
        android:id="@+id/psw_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleText="@string/modify_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <EditText
        android:id="@+id/pw_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/purple_gray_shape"
        android:hint="@string/inputNowPsd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_gray"
        android:textColorHint="@color/text_gray"/>

    <EditText
        android:id="@+id/pw_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_gray_shape"
        android:hint="@string/inputNewPsd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_gray"
        android:textColorHint="@color/text_gray"/>

    <EditText
        android:id="@+id/pw_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_gray_shape"
        android:hint="@string/inputPsdAgain"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_gray"
        android:textColorHint="@color/text_gray"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_btn_background_forbidden"
        android:text="@string/finish"
        android:textColor="@color/app_white"
        android:textSize="18sp"/>

</LinearLayout>
