<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:background="@color/viewBg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/report"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/app_white"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/report"
        android:textColor="@color/textNormal"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/lahei"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/app_white"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/lahei"
        android:textColor="@color/textNormal"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/app_white"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/share"
        android:textColor="@color/textNormal"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_white"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_cancel"
        android:textColor="@color/textNormal"
        android:textSize="15sp"/>

</LinearLayout>