<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lashen"
    android:orientation="vertical"
    android:paddingBottom="2dp">

    <TextView
        android:id="@+id/pop_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/day_rank"
        android:textColor="@color/textNormal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/recyclver_diver"/>

    <TextView
        android:id="@+id/pop_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/month_rank"
        android:textColor="@color/textNormal"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/recyclver_diver"/>

    <TextView
        android:id="@+id/pop_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/sum_rank"
        android:textColor="@color/textNormal"/>


</LinearLayout>
