<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/app_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chos_camera"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_take_photo"
        android:textSize="15sp"
        android:textColor="@color/textNormal"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <TextView
        android:id="@+id/pic_lib"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_pic_photo"
        android:textSize="15sp"
        android:textColor="@color/textNormal"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/btn_cancel"
        android:textSize="15sp"
        android:textColor="@color/textNormal"/>

</LinearLayout>
