<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:orientation="vertical">

    <cn.feihutv.zhibofeihu.ui.widget.TCActivityTitle
        android:id="@+id/zb_eui_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:moreText="@string/get_the_record"
        app:titleText="@string/myearnings"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diver"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/earnings_shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hubi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_sure_forbidden"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gold_coin"
                android:layout_marginTop="20dp"
                android:textColor="@color/textNormal"
                android:textSize="18sp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_shape"
            android:layerType="software"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_sure_forbidden"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cangetmoney"
                android:textColor="@color/textNormal"
                android:layout_marginTop="16dp"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/earnings_btn_get"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_btn_background_forbidden"
                android:text="@string/zfbgetmoney"
                android:textColor="@color/app_white"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
